Fix iframe overflow

--- a/src/style.css
+++ b/src/style.css
@@ -88,7 +88,9 @@ header h1 {
 }
 
 .iframe-preview {
-    height: 400px;
+    aspect-ratio: 16 / 9;
+    overflow: hidden;
+    /* height: 400px; */
 }
 
 /* make iframe double size */
